# data-recover

./: .gitignore  Makefile
app/: index.html  package.json  tailwind.config.ts  vite.config.ts
app/src/: App.tsx  index.css  main.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: lib.rs  main.rs
app/src/features/disk-selection/api/: disks.api.ts
app/src/features/disk-selection/components/: DiskCard.tsx  DiskGrid.tsx
app/src/features/disk-selection/hooks/: useDisks.ts
app/src/features/file-recovery/api/: recovery.api.ts
app/src/features/file-recovery/components/: RecoveryModal.tsx
app/src/features/file-recovery/hooks/: useRecovery.ts
app/src/features/file-scanner/api/: scan.api.ts
app/src/features/file-scanner/components/: FileList.tsx  FilePreview.tsx  FilterPanel.tsx  ScanProgress.tsx
app/src/pages/: DiskSelectionPage.tsx  ScanResultsPage.tsx
app/src/shared/api/: client.ts
app/src/shared/context/: SettingsContext.tsx
app/src/shared/i18n/: translations.ts
app/src/shared/types/: common.types.ts
server/: main.py  pyproject.toml
server/src/adapters/inbound/api/: router.py
server/src/adapters/inbound/api/routes/: disks.py  recovery.py  scan.py
server/src/adapters/inbound/api/schemas/: disk_schema.py  recovery_schema.py  scan_schema.py
server/src/adapters/outbound/disk_scanner/: mac_disk_scanner.py  platform_disk_scanner.py  windows_disk_scanner.py
server/src/adapters/outbound/file_recovery/: tsk_file_recovery.py
server/src/core/domain/entities/: deleted_file.py  disk.py  scan_session.py
server/src/core/ports/inbound/: disk_service_port.py  recovery_service_port.py
server/src/core/ports/outbound/: disk_scanner_port.py  file_recovery_port.py
server/src/core/use_cases/: list_disks.py  recover_files.py  scan_deleted_files.py
server/src/infrastructure/: container.py  settings.py
(+5 files in other folders)
