[package]
name = "data-recover"
version = "1.0.0"
description = "File Recovery Application"
authors = []
edition = "2021"

[lib]
name = "data_recover_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.2", features = ["shell-open"] }
tauri-plugin-dialog = "2.2"
tauri-plugin-shell = "2.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
