[package]
name = "data-recover"
version = "1.0.0"
description = "File Recovery Application"
authors = []
edition = "2021"

[lib]
name = "data_recover_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
